193 - Create proxy for tiles servers 393 - Allow longer search results card

--- a/src/arches_common/media/css/project.css
+++ b/src/arches_common/media/css/project.css
@@ -43,6 +43,9 @@ body, h1, h2, h3, h4, h5
 
 .search-listing-body {
     overflow-y: scroll;
+    height: unset !important;
+    min-height: 4.6em !important;
+    max-height: 8em !important;
 }
 
 .bc-report-title {
