--- a/src/arches_fossils/arches_fossils/templates/views/components/cards/default-card-report.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/cards/default-card-report.htm
@@ -33,7 +33,9 @@
                                             node: widget.node,
                                             value: tile.data[widget.node.nodeid],
                                             state: "report",
-                                            hideEmptyNodes: tile.parent.hideEmptyNodes || false
+                                            hideEmptyNodes: tile.parent.hideEmptyNodes || false,
+                                            bc_card: card,
+                                            tile: tile
                                         }
                                     } --><!-- /ko -->
                                     <!-- /ko -->
