--- a/src/arches_fossils/arches_fossils/templates/views/components/cards/default.htm
+++ b/src/arches_fossils/arches_fossils/templates/views/components/cards/default.htm
@@ -234,7 +234,7 @@
         </a>
         <!-- /ko-->
         <!-- ko if: provisionalTileViewModel.selectedProvisionalEdit().isfullyprovisional -->
-            <span data-bind="text: $root.translations.newProvisionalContribution"></span>
+        <span data-bind="text: $root.translations.newProvisionalContribution"></span>
         <!-- /ko-->
     </div>
     <!-- /ko-->
@@ -257,10 +257,10 @@
                 <div class='new-provisional-edits-title'>
                     <span data-bind="text: $root.translations.provisionalEdits"></span>
                 </div>
-                <div 
-                    class="btn btn-shim btn-danger btn-labeled btn-xs fa fa-trash new-provisional-edits-delete-all" 
-                    style="padding: 3px;" 
-                    data-bind="click: function(){provisionalTileViewModel.deleteAllProvisionalEdits()}"
+                <div
+                        class="btn btn-shim btn-danger btn-labeled btn-xs fa fa-trash new-provisional-edits-delete-all"
+                        style="padding: 3px;"
+                        data-bind="click: function(){provisionalTileViewModel.deleteAllProvisionalEdits()}"
                 >
                     <span data-bind="text: $root.translations.deleteAllEdits"></span>
                 </div>
@@ -291,7 +291,7 @@
 
                 <!-- ko if: card.model.helpenabled -->
                 <span>
-                    <a data-bind="click: function () {card.model.get('helpactive')(true) }" style="cursor:pointer;"> 
+                    <a data-bind="click: function () {card.model.get('helpactive')(true) }" style="cursor:pointer;">
                         <span data-bind="text: $root.translations.help"></span>
                         <i class="fa fa-question-circle"></i>
                     </a>
@@ -329,7 +329,8 @@
                             expanded: self.expanded,
                             graph: self.form.graph,
                             type: "resource-editor",
-                            disabled: !self.card.isWritable && !self.preview
+                            disabled: !self.card.isWritable && !self.preview,
+                            bc_card: card
                         }
                     }, css:{ "active": widget.selected, "hover": widget.hovered, "widget-preview": self.preview
                 }, click: function(data, e) { if (!widget.selected() && self.preview) {widget.selected(true);}
@@ -371,7 +372,8 @@
                                         label: self.form.widgetLookup[card.widgets()[0].widget_id()].label,
                                         value: tile.data[card.widgets()[0].node_id()],
                                         type: 'resource-editor',
-                                        state: 'display_value'
+                                        state: 'display_value',
+                                        bc_card: card
                                     }
                                 }"></div>
                                 <!-- /ko -->
@@ -389,28 +391,28 @@
             {% block form_buttons %}
             <div class="install-buttons">
                 <!-- ko if: tile.tileid && self.deleteTile -->
-                <button 
-                    class="btn btn-shim btn-labeled btn-lg fa fa-trash" 
-                    data-bind="click: self.deleteTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-warning': card.isWritable }"
+                <button
+                        class="btn btn-shim btn-labeled btn-lg fa fa-trash"
+                        data-bind="click: self.deleteTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-warning': card.isWritable }"
                 >
                     <span data-bind="text: $root.translations.deleteThisRecord"></span>
                 </button>
                 <!-- /ko -->
 
                 <!-- ko if: tile.dirty() -->
-                    <!-- ko if: provisionalTileViewModel && !provisionalTileViewModel.tileIsFullyProvisional() && card.isWritable -->
-                    <button class="btn btn-shim btn-danger btn-labeled btn-lg fa fa-times" data-bind="click: tile.reset">
-                        <span data-bind="text: $root.translations.cancelEdit"></span>
-                    </button>
-                    <!-- /ko -->
-
-                    <!-- ko if: tile.tileid -->
-                    <button class="btn btn-shim btn-labeled btn-lg fa fa-plus" data-bind="click: self.saveTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-mint': card.isWritable }">
-                        <span data-bind="text: $root.translations.saveEdit"></span>
-                    </button>
-                    <!-- /ko -->
+                <!-- ko if: provisionalTileViewModel && !provisionalTileViewModel.tileIsFullyProvisional() && card.isWritable -->
+                <button class="btn btn-shim btn-danger btn-labeled btn-lg fa fa-times" data-bind="click: tile.reset">
+                    <span data-bind="text: $root.translations.cancelEdit"></span>
+                </button>
                 <!-- /ko -->
-                
+
+                <!-- ko if: tile.tileid -->
+                <button class="btn btn-shim btn-labeled btn-lg fa fa-plus" data-bind="click: self.saveTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-mint': card.isWritable }">
+                    <span data-bind="text: $root.translations.saveEdit"></span>
+                </button>
+                <!-- /ko -->
+                <!-- /ko -->
+
                 <!-- ko if: !tile.tileid && !showChildCards() -->
                 <button class="btn btn-shim btn-labeled btn-lg fa fa-plus" data-bind="click: self.saveTile, css: {disabled: (!card.isWritable && !self.preview), 'btn-mint': card.isWritable }">
                     <span data-bind="text: $root.translations.add"></span>
